--- a/style.css
+++ b/style.css
@@ -70,19 +70,17 @@ a {
   justify-content: center;
   align-items: center;
   text-align: center;
+  height: 100vh;
  
   
 }
 #section1 > h2{
-  
-  margin-top: 216px;
     font-size: 40px;
     color: white;
 
 }
 
 #container {
-  margin-top: 8%;
   display: flex;
   flex-direction: column;
   background-color: rgba(255,255,255, 1);
