--- a/style.css
+++ b/style.css
@@ -259,6 +259,15 @@ body::before {
     display: table-column;
    }
 
+   #section1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 75vh;
+   }
+
    #section1 > h2 {
      font-size: 35px;
      margin-top: 120px;
