--- a/style.css
+++ b/style.css
@@ -74,10 +74,17 @@ a {
  
   
 }
-#section1 > h2{
-    font-size: 40px;
+#section1 > h1
+{
+    margin: 0;
+    font-size: 3rem;
     color: white;
 
+}
+#section1 > p {
+  font-size: 1.5rem;
+  color:white;
+  margin: 0;
 }
 
 #container {
