--- a/style.css
+++ b/style.css
@@ -275,11 +275,18 @@ body::before {
     height: 75vh;
    }
 
-   #section1 > h2 {
-     font-size: 35px;
-     margin-top: 120px;
-     color:white;
-   }
+   #section1 > h1
+  {
+    margin: 0;
+    font-size: 2.5rem;
+    color: white;
+
+  }
+  #section1 > p {
+    font-size: 1.3rem;
+    color:white;
+    margin: 0;
+  }
 
    #Cars > .product {
      margin: 10px;
