--- a/style.css
+++ b/style.css
@@ -228,7 +228,16 @@ body::before {
 
 }
 
-
+@media only screen and (max-width: 350px)
+{
+  #section1 > h1
+  {
+    font-size: 2rem;
+  }
+  #section1 > p {
+    font-size: 1.2rem;
+  }
+}
 /*Phone responsiveness setup*/
 @media only screen and  (max-width: 900px)
 {
