--- a/style.css
+++ b/style.css
@@ -155,7 +155,11 @@ body::before {
 #Cars {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+}
+
+.renegade {
+  height: 20rem;
+  width: 100%;
 }
 
 
@@ -206,7 +210,7 @@ body::before {
       align-items: center;
       text-align: center;
       margin: 10px;
-      width: calc(100% / 3);
+      width: calc(100% / 4);
       border: 1px solid #000;
       border-radius: 3px;
       height: fit-content;
@@ -214,7 +218,7 @@ body::before {
 
     .product > img{
       max-width: 100%;
-      height: auto;
+      
     }
 
     #header {
@@ -306,7 +310,7 @@ body::before {
 
    .product > img{
      max-width: 100%;
-     height: auto;
+     
 
    }
 
