--- a/style.css
+++ b/style.css
@@ -107,8 +107,9 @@ a {
 }
 
 #container > p {
-  font-weight: 700;
+  font-weight: 800;
   font-size: 30px;
+  margin: 50px 0px 50px 0px;
 }
 
 body {
